All files updated

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>ReelPulse</title>
+    <title>ReelPulse - Discover Your Content</title>
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="styles/landing-page.css">
 </head>
@@ -33,7 +33,7 @@
             <option value="series">Web Shows</option>
         </select>
         <input type="text" name="search" id="search" placeholder="Enter ReelPulse" maxlength="50">
-        <button><i class="fa-solid fa-magnifying-glass"></i></button>
+        <a href="suggestions-page.html"><button><i class="fa-solid fa-magnifying-glass"></i></button></a>
     </div>
     <div id="suggestionContainer"></div>
     <footer>&copy; 2024 <a href="https://linktr.ee/singhaniket2910" target="_blank" rel="noopener noreferrer">Aniket
